# trial1

./: CMakeLists.txt  dummy  sample.cpp  text2.txt  try3.txt
src/: ConsecutiveNum.cpp  add.h  app  dummy  main.cpp
test/: test_add.cpp
